# just-dna-lite

./: .env.example  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Containerfile  README.md  compose.yaml  dagster.yaml.template  modules.yaml  pyproject.toml  uv.toml
.github/: CI.md  README.md
.github/workflows/: nix.yml  tests.yml
data/article/: contents.md
data/article/familial_longevity/: MODULE.md  module_spec.yaml  studies.csv  variants.csv
data/article/latest_longevity/v1/: MODULE.md  annotations.parquet  module_spec.yaml  studies.csv  studies.parquet  variants.csv  weights.parquet
data/article/latest_longevity/v2/: MODULE.md  annotations.parquet  module_spec.yaml  studies.csv  studies.parquet  variants.csv  weights.parquet
data/input/tests/: antku_small.parquet  antonkulaga.vcf_longevity.sqlite
data/module_specs/evals/cyp_panel/: freeform_input.md  module_spec.yaml  studies.csv  variants.csv
data/module_specs/evals/mthfr_nad/: freeform_input.md  module_spec.yaml  studies.csv  variants.csv
dataset_cards/: clinvar_card_template.md  ensembl_card_template.md
docs/: AI_MODULE_CREATION.md  ANNOTATION.md  ARCHITECTURE.md  CLEAN_SETUP.md  COMPILER.md  DAGSTER_ASSETS.md  DAGSTER_GUIDE.md  DAGSTER_METRICS.md  DAGSTER_MULTI_USER.md  DESIGN.md  DUCKDB_ANNOTATION.md  DUCKDB_MEMORY.md  FAQ.md  HF_MODULES.md  PERFORMANCE.md  SCIENCE_LITERACY.md  UPLOAD_HF.md  V1_PARITY.md  VCF_NORMALIZATION_AGENT_PROMPT.md  WEBUI_STATUS.md  just-prs-restoration-once-per-batch.md  module_system_qa.md
docs/manuscript/v0.2/: manuscript-strategy-v0.2.md  paper1-blockers.md  paper1-just-dna-lite.md  paper2-dna-agents.md
docs/workshops/: robio-2026.md
genobear/: README.md  pyproject.toml
genobear/src/genobear/: annotate.py  annotate_prefect.py  config.py  io.py  prepare.py  runtime.py
genobear/src/genobear/annotation/: ensembl_annotations.py  ensembl_annotations_prefect.py  runners.py  vcf_parser.py
genobear/src/genobear/oakvar/: modules.py
genobear/src/genobear/pipelines/: __init__.py  cli.py  registry.py  serve.py
genobear/src/genobear/preparation/: dataset_card_generator.py  huggingface_uploader.py  runners.py  runners_prefect.py  vcf_downloader.py  vcf_parquet_splitter.py
genobear/src/genobear/vortex/: parquet_to_vortex.py
genobear/tests/: conftest.py  test_annotation_pipeline_integration.py  test_parquet_to_vortex.py  test_read_vcf_save_vortex.py  test_vcf_pipeline_integration.py
just-dna-pipelines/: README.md  just-dna-pipelines.code-workspace  pyproject.toml
just-dna-pipelines/src/just_dna_pipelines/: __init__.py  cli.py  config.py  io.py  models.py  module_config.py  module_registry.py  modules.yaml  runtime.py
just-dna-pipelines/src/just_dna_pipelines/agents/: cli.py  module_creator.py  module_creator.yaml
just-dna-pipelines/src/just_dna_pipelines/agents/prompts/: module_creator.yaml  pi.yaml  researcher.yaml  reviewer.yaml  team.yaml
just-dna-pipelines/src/just_dna_pipelines/annotation/: __init__.py  assets.py  configs.py  definitions.py  duckdb_assets.py  hf_assets.py  hf_logic.py  hf_modules.py  io_managers.py  jobs.py  logic.py  ops.py  registry.py  report_assets.py  report_logic.py  resources.py  sensors.py  utils.py  vcf_export_logic.py
just-dna-pipelines/src/just_dna_pipelines/annotation/templates/: longevity_report.html.j2
just-dna-pipelines/src/just_dna_pipelines/module_compiler/: __init__.py  cli.py  compiler.py  models.py  resolver.py
just-dna-pipelines/src/just_dna_pipelines/oakvar/: modules.py
just-dna-pipelines/src/just_dna_pipelines/pipelines/: __init__.py
just-dna-pipelines/src/just_dna_pipelines/v1_port/: __init__.py  adapters.py  alleles.py  cli.py  clinvar.py  genotype.py  pmid.py  publish.py  runner.py  sources.py  symbols.py  writer.py
just-dna-pipelines/src/just_dna_pipelines/v1_port/data/: superhuman_pmid_curation.csv
just-dna-pipelines/tests/: benchmark_annotation.py  conftest.py  test_clean_setup.py  test_dagster_config.py  test_duckdb_memory.py  test_hf_modules.py  test_module_compiler.py  test_module_roundtrip.py  test_quality_filters.py  test_v1_port.py  test_vcf_formats.py
notebooks/: anotation_notebook.ipynb  clinvar_notebook.ipynb  explore_hf_module_annotations.ipynb  inspect_annotators.ipynb  polars_bio_format_fields_issue.ipynb  validate.ipynb  work_with_sqlite.ipynb
src/genobear/: annotate.py  prepare.py  runtime.py
src/genobear/annotation/: chromosomes.py  ensembl_annotations.py  runners.py  vcf_parser.py
src/genobear/preparation/: __init__.py  runners.py  vcf_downloader.py  vcf_parquet_splitter.py
src/genobear/vortex/: convert_vortex.py  parquet_to_vortex.py
src/just_dna_lite/: __init__.py  cli.py  registry_org_cli.py
tests/: test_agent_smoke.py  test_annotation_pipeline_integration.py  test_read_vcf_save_vortex.py
webui/: .gitignore  README.md  pyproject.toml  rxconfig.py
webui/reflex.lock/: package.json
webui/src/webui/: __init__.py  app.py  crawler_assets.py  deployment_urls.py  marketplace_identity.py  registry_identity.py  run.py  state.py  webui.py
webui/src/webui/components/: layout.py
webui/src/webui/pages/: __init__.py  analysis.py  annotate.py  dashboard.py  index.py  jobs.py  marketplace.py  modules.py  registry.py
windows/: installer.iss  just-dna-lite.bat
