[project]
name = "just-dna-lite"
version = "0.1.1"
description = "Just DNA Lite version to analyze your omics faster"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.20.1",
  "genobear",
  "webui",
]

[tool.uv.sources]
genobear = { workspace = true }
webui = { workspace = true }

[project.scripts]
start = "just_dna_lite.cli:app"

[tool.uv.workspace]
members = ["genobear", "webui"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"
