[project]
name = "webui"
version = "0.1.1"
description = "Reflex Web UI for just-dna-lite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "reflex>=0.8.27",
  "just-dna-pipelines",
  "granian>=2.7.1",
  "fastapi>=0.129.0",
  "reflex-mui-datagrid>=0.1.8",
  "prs-ui>=0.1.3",
  "just-prs>=0.3.3",
]

[tool.uv.sources]
# Use the workspace-local just-dna-pipelines package as a dependency.
just-dna-pipelines = { workspace = true }

[project.scripts]
run = "webui.run:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff>=0.14.6",
]
